<resources>
    <string name="app_name">Book Bus</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="search_bus_button">Search Buses</string>
    <string name="recently_viewed_title">Recently Viewed</string>
    <string name="booking_history_title">Booking History</string>
    <string name="my_account_title">My Account</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="my_bookings">My Bookings</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="welcome_title">Welcome back</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="logo_content_description">App Logo</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="do_not_have_account">Don\'t have an account? Sign up</string>
    <string name="have_an_account">Have an account? Log in</string>
    <string name="password_condition_lowercase">one lowercase character</string>
    <string name="password_condition_uppercase">one uppercase character</string>
    <string name="password_condition_special">one special character</string>
    <string name="password_condition_minimum">8 characters minimum</string>
    <string name="create_account">Create Account</string>
    <string name="register">Register</string>
    <string name="profile_details">Profile Detail</string>
    <string name="mobile_exists_text">Mobile Number already Exists</string>
    <string name="reset_password">Reset Password</string>
    <string name="select_seats">Select Seats</string>
    <string name="continue_text">Continue</string>
    <string name="mobile_not_linked">No account linked with this mobile number</string>
    <string name="password_not_matching">Password not matching</string>
    <string name="mobile_not_exists">Mobile Number does not Exists.</string>
    <string name="back_to_login">Back To Login</string>
    <string name="should_not_be_empty">Should not be empty</string>
    <string name="invalid_mobile_number">Invalid mobile number</string>
    <string name="username">Username</string>
    <string name="email_id">Email ID</string>
    <string name="my_account">My Account</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="about">About</string>
    <string name="no_value">-</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="email_address">Email Address</string>
    <string name="_00">00</string>
    <string name="upcoming_trips">Upcoming Trips</string>
    <string name="completed_trips">Completed Trips</string>
    <string name="cancelled_trips">Cancelled Trips</string>
    <string name="user_details">User Details</string>
    <string name="email">Email</string>
    <string name="date_format">DD / MM / YYYY</string>
    <string name="save_changes">Save changes</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="cancel_ticket">Cancel Ticket</string>
    <string name="booking_details">Booking details</string>
    <string name="analytics">Analytics</string>
    <string name="services">Services</string>
    <string name="enter_source">Enter Source</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="bus_results">Bus Results</string>
    <string name="sort_and_filter">Sort and Filter</string>
    <string name="enter_valid_mobile_number">Enter a valid mobile number</string>
    <string name="enter_mobile_to_proceed">Enter mobile number to proceed</string>
    <string name="passenger_name">Passenger Name</string>
    <string name="seat">Seat:</string>
    <string name="example_seat_code">UU1</string>
    <string name="this_is_an_example_welcome_title">This is an example welcome title</string>
    <string name="this_section_is_like_a_detailed_explanation_for_the_above_title_in_welcome_screen">This section is like a detailed explanation for the above title in welcome screen</string>
    <string name="welcome_title_1">Welcome to Book Bus!</string>
    <string name="subtitle_1">Your one-stop-shop for booking bus tickets anytime, anywhere.</string>
    <string name="welcome_title_2">Affordable Travel, Always!</string>
    <string name="subtitle_2">Find the best deals and book your bus tickets at unbeatable prices with Book Bus.</string>
    <string name="welcome_title_3">Start Your Journey Here!</string>
    <string name="subtitle_3">Plan your next trip and book your bus tickets hassle-free with Book Bus.</string>
    <string name="profile_updated_successfully">Profile Updated successfully</string>
    <string name="update_profile">Update Profile</string>
    <string name="skip_and_update_later">Skip and update later</string>
    <string name="complete_your_profile">Complete your Profile</string>
    <string name="required">(Required)*</string>
    <string name="maximum_6_seats_only_allowed">Maximum 6 seats only allowed</string>
    <string name="continue_as">Continue as</string>
    <string name="admin">Admin</string>
    <string name="or">OR</string>
    <string name="user">User</string>
    <string name="boarding_dropping_points">Boarding and Dropping Points</string>
    <string name="boarding_point">Boarding Point</string>
    <string name="dropping_point">Dropping Point</string>
    <string name="example_bus_name">Example bus name</string>
    <string name="time_format">hh:mm</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="login_register">Login / Register</string>
    <string name="_12345">12345</string>
    <string name="passenger_information">Passenger Information</string>
    <string name="contact_details">Contact Details</string>
    <string name="passenger_1">Passenger - 1</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System Default</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="sample_mail">example@mail.com</string>
    <string name="search_buses">search buses</string>
    <string name="lower_deck">Lower deck</string>
    <string name="_1400">₹ 1400</string>
    <string name="upper_deck">Upper deck</string>
    <string name="available">Available</string>
    <string name="not_available">Not available</string>
    <string name="selected">Selected</string>
    <string name="your_booking_is_confirmed">Your booking is confirmed!</string>
    <string name="example_partner_name">Example partner name</string>
    <string name="each_700">Each 700</string>
    <string name="a_c_seater">A/C Seater</string>
    <string name="bengaluru">Bengaluru</string>
    <string name="contact_information">Contact Information</string>
    <string name="_22_male">22, Male</string>
    <string name="passenger_details">Passenger details</string>
    <string name="passenger_contact_details">Passenger contact details</string>
    <string name="bus_contact_details">Bus contact details</string>
    <string name="add_bus">Add Bus</string>
    <string name="select_city">Select City</string>
    <string name="boarding_and_dropping_point">Boarding and Dropping Point</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="bus_info">Bus info</string>
    <string name="sample_mobile">9876543210</string>
    <string name="blankets">Blankets</string>
    <string name="charging_point">Charging Point</string>
    <string name="emergency_contact_number">Emergency Contact Number</string>
    <string name="bus_tracking">Bus Tracking</string>
    <string name="wifi">WIFI</string>
    <string name="water_bottle">Water Bottle</string>
    <string name="live_chat_support">Live Chat Support</string>
    <string name="enter_here">Enter here</string>
    <string name="send">send</string>
    <string name="add_partner">Add Partner</string>
    <string name="update_partner_details">Update Partner Details</string>
    <string name="admin_login">Admin Login</string>
    <string name="feedback">Feedback</string>
    <string name="rating_bar">rating bar</string>
    <string name="ratings_reviews"><![CDATA[Ratings & Reviews]]></string>
    <string name="select_bus_type">Select bus type</string>
    <string name="register_bus">Register Bus</string>
    <string name="bus_registration">Bus Registration</string>
    <string name="select_partner">Select Partner</string>
    <string name="partner">Partner</string>
    <string name="bus_name">Bus name</string>
    <string name="enter_bus_name">Enter bus name</string>
    <string name="boarding_state">Boarding State</string>
    <string name="select_boarding_state">Select boarding state</string>
    <string name="boarding_location_details">Boarding location details</string>
    <string name="boarding_city">Boarding City</string>
    <string name="dropping_location_details">Dropping location details</string>
    <string name="dropping_state">Dropping State</string>
    <string name="select_dropping_state">Select dropping state</string>
    <string name="dropping_city">Dropping City</string>
    <string name="select_dropping_city">Select dropping city</string>
    <string name="select_boarding_city">Select boarding city</string>
    <string name="price">Price</string>
    <string name="ticket_cost">Ticket Cost</string>
    <string name="enter_price">Enter price</string>
    <string name="timing_details">Timing details</string>
    <string name="start_time">Start Time</string>
    <string name="reach_time">Reach Time</string>
    <string name="bus_seat_details">Bus seat details</string>
    <string name="bus_type">Bus Type</string>
    <string name="number_of_decks">Number of decks</string>
    <string name="has_upper_deck">Has upper deck?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="lower_deck_details">Lower deck details</string>
    <string name="lower_left_seat_details">Lower left seat details</string>
    <string name="_0">0</string>
    <string name="seats_count">Seats count</string>
    <string name="column_count">Column Count</string>
    <string name="lower_right_seat_details">Lower right seat details</string>
    <string name="upper_deck_details">Upper deck details</string>
    <string name="upper_left_seat_details">Upper left seat details</string>
    <string name="upper_right_seat_details">Upper right seat details</string>
    <string name="select_location">Select Location</string>
    <string name="seater_sleeper">Seater/Sleeper</string>
    <string name="choose_bus_type">Choose bus type</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="seat_count">Seat count</string>
    <string name="thiruvananthapuram">Thiruvananthapuram</string>
    <string name="date_text_format">23 September 2023</string>
    <string name="partner_registration">Partner Registration</string>
    <string name="all_bookings">All Bookings</string>
    <string name="enter_your_query_here">Enter your query here</string>
    <string name="enter_your_query">Enter your query</string>
    <string name="search">Search...</string>
    <string name="buses_operated">Buses Operated</string>
    <string name="non_ac_seater">Non A/C Seater</string>
    <string name="sleeper">Sleeper</string>
    <string name="user_id_">User Id: #</string>
    <string name="partners_registered">Partners Registered</string>
    <string name="tickets_booked">Tickets booked</string>
    <string name="users_registered">Users Registered</string>
    <string name="sample_username">Sample username</string>
</resources>