<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passenger_name_text"
        android:text="@string/passenger_name"
        style="@style/TextDefault"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="16dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/age_gender_text"
        android:text="@string/_22_male"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/passenger_name_text"
        app:layout_constraintLeft_toLeftOf="@id/passenger_name_text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seat_title"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Seat"
        android:layout_margin="16dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seat_name_text"
        android:text="@string/example_seat_code"
        style="@style/TitleTextStyle"
        app:layout_constraintTop_toBottomOf="@id/seat_title"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp"
        />






</androidx.constraintlayout.widget.ConstraintLayout>