<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/passenger_checkbox_item"
    android:clickable="true"
    android:foreground="?android:selectableItemBackground"
    android:focusable="true">

    <TextView
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:id="@+id/passenger_name"
        android:text="@string/passenger_name"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/checkBox"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        style="@style/TextColor"
        android:gravity="bottom"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:id="@+id/seat_number_title"
        android:text="@string/seat"
        app:layout_constraintTop_toBottomOf="@id/passenger_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:textSize="12sp"
        android:gravity="bottom"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:id="@+id/seat_number"
        android:text="@string/example_seat_code"
        app:layout_constraintTop_toTopOf="@id/seat_number_title"
        app:layout_constraintBottom_toBottomOf="@id/seat_number_title"
        android:gravity="bottom"
        app:layout_constraintLeft_toRightOf="@id/seat_number_title"
        android:textSize="12sp"
        android:layout_marginStart="4dp"
        />

    <CheckBox
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:id="@+id/checkBox"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clickable="false"
        />


</androidx.constraintlayout.widget.ConstraintLayout>