<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.forgotpassword.ForgotPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


    <TextView
        android:id="@+id/reset_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        style="@style/LargeTitleText"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobile_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_baseline_local_phone_24"
        android:hint="@string/mobile_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_password_title"
        android:layout_margin="16dp"
        app:shapeAppearance="@style/Rounded"
        app:helperTextTextColor="@color/errorColor"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobile_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="10"
            android:cursorVisible="true"
            android:textCursorDrawable="@drawable/red_cursor"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Create new password"
        app:endIconMode="password_toggle"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mobile_input_layout"
        app:shapeAppearance="@style/Rounded"
        app:helperTextTextColor="@color/errorColor"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPassword_input"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:textCursorDrawable="@drawable/red_cursor"
            />

    </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_condition_lowercase"
            android:text="@string/password_condition_lowercase"
            app:drawableStartCompat="@drawable/baseline_check_circle_24_default"
            app:layout_constraintTop_toBottomOf="@id/password_input_layout"
            app:layout_constraintLeft_toLeftOf="@id/password_input_layout"
            android:layout_marginTop="16dp"
            android:drawablePadding="8dp"
            android:textSize="14sp"
            android:gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_condition_uppercase"
            android:text="@string/password_condition_uppercase"
            app:drawableStartCompat="@drawable/baseline_check_circle_24_default"
            app:layout_constraintTop_toBottomOf="@id/password_condition_lowercase"
            app:layout_constraintLeft_toLeftOf="@id/password_input_layout"
            android:layout_marginTop="16dp"
            android:drawablePadding="8dp"
            android:textSize="14sp"
            android:gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_condition_special"
            android:text="@string/password_condition_special"
            app:drawableStartCompat="@drawable/baseline_check_circle_24_default"
            app:layout_constraintTop_toBottomOf="@id/password_condition_uppercase"
            app:layout_constraintLeft_toLeftOf="@id/password_input_layout"
            android:layout_marginTop="16dp"
            android:drawablePadding="8dp"
            android:textSize="14sp"
            android:gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_condition_minimum"
            android:text="@string/password_condition_minimum"
            app:drawableStartCompat="@drawable/baseline_check_circle_24_default"
            app:layout_constraintTop_toBottomOf="@id/password_condition_special"
            app:layout_constraintLeft_toLeftOf="@id/password_input_layout"
            android:layout_marginTop="16dp"
            android:drawablePadding="8dp"
            android:textSize="14sp"
            android:gravity="center"
            />


    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_condition_minimum"
        android:layout_marginTop="16dp"
        android:text="@string/reset_password"
        />

    <TextView
        android:id="@+id/backToLogin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_login"
        style="@style/linkTextStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_button"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>