<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.editprofile.EditProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/username_title"
            android:text="@string/username"
            style="@style/TextDefault"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="16dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:shapeAppearance="@style/Rounded"
            app:helperTextTextColor="@color/errorColor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_title"
            android:layout_marginHorizontal="16dp"
            app:hintEnabled="false"
            android:layout_marginTop="8dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:cursorVisible="true"
                android:hint="@string/username"
                android:textCursorDrawable="@drawable/red_cursor"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_title"
            android:text="@string/email"
            app:layout_constraintTop_toBottomOf="@id/username_input_layout"
            app:layout_constraintLeft_toLeftOf="@id/username_input_layout"
            android:layout_marginTop="16dp"
            style="@style/TextDefault"
            android:textSize="16sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:shapeAppearance="@style/Rounded"
            app:helperTextTextColor="@color/errorColor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_title"
            android:layout_marginHorizontal="16dp"
            app:hintEnabled="false"
            android:layout_marginTop="8dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:cursorVisible="true"
                android:hint="example@mail.com"
                android:textCursorDrawable="@drawable/red_cursor"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dob_title"
            android:text="@string/date_of_birth"
            app:layout_constraintTop_toBottomOf="@id/email_input_layout"
            app:layout_constraintLeft_toLeftOf="@id/email_input_layout"
            style="@style/TextDefault"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dob_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/date_format"
            app:shapeAppearance="@style/Rounded"
            app:helperTextTextColor="@color/errorColor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dob_title"
            android:layout_marginHorizontal="16dp"
            android:focusable="false"
            app:hintEnabled="false"
            android:layout_marginTop="8dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dob_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/date_format"
                android:textCursorDrawable="@drawable/red_cursor"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gender_title"
            android:text="@string/gender"
            app:layout_constraintTop_toBottomOf="@id/dob_input_layout"
            app:layout_constraintLeft_toLeftOf="@id/dob_input_layout"
            android:layout_marginTop="16dp"
            style="@style/TextDefault"
            android:textSize="16sp"
            />


                <RadioGroup
                    android:id="@+id/gender_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/gender_title"
                    app:layout_constraintLeft_toLeftOf="@id/gender_title"
                    android:layout_marginLeft="16dp"
                    >

                    <RadioButton
                        android:id="@+id/male_radio_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/male"
                        android:textSize="16sp"
                        style="@style/TextDefault"/>

                    <RadioButton
                        android:id="@+id/female_radio_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:padding="16dp"
                        android:textSize="16sp"
                        style="@style/TextDefault"/>

                </RadioGroup>



                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/save_changes_button"
                    android:text="@string/save_changes"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/gender_radio_group"
                    android:layout_marginTop="16dp"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>